--- a/Oving1/style.css
+++ b/Oving1/style.css
@@ -1,1 +1,36 @@
+.grid{
+    display: grid;
+    background-image: url(logo.png);
+}
+
 h2 {display: inline;}
+
+#copyright {
+    text-align: center;
+    border-style: groove;
+    padding: 10px;
+    margin: 10px;
+}
+
+.menu {
+    background-color: #333;
+}
+
+.menu a {
+    float: left;
+    color: #ddd;
+    background-color: #333;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+}
+
+.menu a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.menu a.active {
+    background-color: #04AA6D;
+    color: white;
+}
